objects/CaseType__c.object
<CustomObject>
    <description>To organize the various services provided by the Agency for their clients.</description>
    <fields>
        <fullName>CaseGuidanceTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Guidance Template</description>
        <label>Case Guidance Template</label>
        <referenceTo>CaseGuidanceTemplate__c</referenceTo>
        <relationshipLabel>Case Types</relationshipLabel>
        <relationshipName>Case_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientCaseRecordType__c</fullName>
        <label>Client Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionEnglish__c</fullName>
        <label>Description (English)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DescriptionSpanish__c</fullName>
        <label>Description (Spanish)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief qualitative overview of the Case Type being provided to the client.</description>
        <inlineHelpText>Brief qualitative overview of the service being provided to the client.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FrequentlyAskedQuestionsEnglish__c</fullName>
        <inlineHelpText>Recommend limit to a maximum of 3 questions and this will be displayed on the Service Details page over the portal.</inlineHelpText>
        <label>Frequently Asked Questions (English)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FrequentlyAskedQuestionsSpanish__c</fullName>
        <inlineHelpText>Recommend limit to a maximum of 3 questions and this will be displayed on the Service Details page over the portal.</inlineHelpText>
        <label>Frequently Asked Questions (Spanish)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HUDPurpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Assistance</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase/Homebuying</fullName>
                </value>
                <value>
                    <fullName>Rental Topics</fullName>
                </value>
                <value>
                    <fullName>Non-Delinquency Post-Purchase</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Forward Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Reverse Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness Assistance</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Assistance</fullName>
                </value>
                <value>
                    <fullName>Not HUD-Reportable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighlightsSpanish__c</fullName>
        <label>Highlights (Spanish)</label>
        <length>800</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <inlineHelpText>Recommend limit to a maximum of 3 bullet points, with each bullet point containing no more than 40 characters, or 130 characters total. This will be displayed on the Service summary card on the portal.</inlineHelpText>
        <label>Highlights (English)</label>
        <length>800</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsClientLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmergencyTriage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Emergency Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameSpanish__c</fullName>
        <label>Case Type Name (Spanish)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequiredDocumentsSpanish__c</fullName>
        <label>Required Documents (Spanish)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RequiredDocuments__c</fullName>
        <label>Required Documents</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShortDescriptionSpanish__c</fullName>
        <label>Short Description (Spanish)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <inlineHelpText>Enter a brief (up to 120 characters) summary for the service. This will appear on the portal service page&apos;s summary card.</inlineHelpText>
        <label>Short Description (English)</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Reverse_Mortage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Reverse Mortage</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DescriptionEnglish__c</columns>
        <columns>Highlights__c</columns>
        <columns>ShortDescription__c</columns>
        <columns>ClientCaseRecordType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>